--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 #root {
-  max-width: 1380px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  text-decoration: none;
 }
 
 /* .logo {
